--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ header img {
 .form-infos input {
     width: auto;
     outline: none;
-    border: #234B68 0.10vw solid;
+    border: #234B68 0.15vw solid;
     box-shadow: 0vw 0.21vw 0.21vw 0vw #4B5563;
     font-size: 0.83vw;
     margin-left: auto;
@@ -108,6 +108,7 @@ header img {
     border: 0.052vw solid #234B68;
     border-radius: 0.52vw;
     box-shadow: 0vw 0.21vw 0.21vw 0vw #4B5563;
+    display: none;
 }
 
 .tab h2 {
@@ -172,5 +173,9 @@ header img {
     font-family: sans-serif;
     font-size: 1.3vw;
     text-align: center;
-    visibility: visible;
+    visibility: hidden;
+}
+
+.error {
+    border: #FF822E 0.15vw solid !important;
 }
