--- a/css/style.css
+++ b/css/style.css
@@ -42,26 +42,26 @@ header img {
     font-weight: 700;
     white-space: nowrap;
     padding: 0.52vw;
+    text-align: left;
 }
 
 .form-infos input {
     width: auto;
+    height: 2.08vw;
     outline: none;
     border: #234B68 0.15vw solid;
     box-shadow: 0vw 0.21vw 0.21vw 0vw #4B5563;
     font-size: 0.83vw;
-    margin-left: auto;
+    margin-top: -2.1vw;
 }
 
 .inputs {
-    display: flex;
-    padding: 1vw;
+    padding: 1vw;   
 }
 
 .input-custom {
-    width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: right;
 
 }
 
@@ -79,6 +79,7 @@ header img {
     border-radius: 0 0.52vw 0.52vw 0;
     margin-left: -0.052vw;
     font-family: sans-serif;
+    margin-top: -2.1vw;
 }
 
 #calculate {
